fix(security): resolve 11 OWASP vulnerabilities (round 2)
CRITICAL:
- Add ObjectInputFilter whitelist to RocksDB deserialization (A08 RCE)
- Remove FTP credentials from debug logs (A02/A09)
- Remove default weak password "123456" for delete.password and ftp.password (A05/A07)

HIGH:
- Add SecurityHeadersFilter (X-Frame-Options, X-Content-Type-Options, etc.) (A05)
- Fix FreeMarker JS context injection with ?js_string in commonHeader.ftl and officeweb.ftl (A03)
- Restrict Actuator to health endpoint only, show-details=when-authorized (A05)
- Add SafeRedirectStrategy to block SSRF via HTTP redirects (A10)
- Replace Runtime.exec shell pipes with ProcessBuilder+pgrep/pkill (A03)
- Enhance path traversal detection with URL decode loop + Path.normalize() (A01)
- Use MessageDigest.isEqual() for constant-time secret key comparison (A01)
- Document recommended SSRF blacklist for internal IP ranges (A10)

BREAKING CHANGES:
- delete.password defaults to empty (delete disabled until configured)
- ftp.password defaults to empty (must be explicitly configured)
- Actuator only exposes /health (info and metrics removed)